--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$primary-color: #444;
+$primary-color: #333;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
@@ -27,6 +27,17 @@ $background-opacity: 0.8;
       }
     }
     
+  }
+}
+
+// ajust text color
+
+@function set-text-color($color){
+  @if (lightness($color) > 40){
+    @return #000;
+
+  }@else {
+    @return #fff;
   }
 }
 
