--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,10 +1,15 @@
 @include mediaXl {
-
+  .projects{
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 @include mediaLg {
-  
+  .projects{
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 @include mediaMd {
+
   main{
     align-items: center;
     text-align: center;
@@ -14,7 +19,7 @@
       margin-bottom: 1rem;
     }
   }
-  ul.main-nav,
+  ul.menu-nav,
   div.menu-branding{
     float: none;
     width: 100%;
@@ -37,9 +42,28 @@
       height: 150px;
     }
   }
+
+  .about-info{
+    grid-template-areas: 
+    'bioimage'
+    'bio'
+    'job1'
+    'job2'
+    'job3';
+
+    grid-template-columns: 1fr;
+  }
+
+  .projects{
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @include mediaSm {
   main#home h1{
     margin-top: 10vh;
+  }
+
+  .projects{
+    grid-template-columns: 1fr;
   }
 }
